# galfus-script

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE.md  MILESTONE.md  README.md  deny.toml  test_output.txt  test_playground.rs
.agents/rules/: galfus-script-development.md
.cargo/: config.toml
.github/: CODEOWNERS  auto_assign.yml  copilot-instructions.md  labeler.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  support.yml
.github/workflows/: editors-ci.yml  playground-web-ci.yml  pr-labels-n-validate.yml  stale.yml
crates/galfus-builtins/: Cargo.toml  README.md
crates/galfus-builtins/rich_builtins/: buffer.gfs  constraints.gfs  format.gfs  io.gfs  iterable.gfs  range.gfs  text.gfs  thread.gfs
crates/galfus-builtins/rich_builtins/format/: ansi.gfs
crates/galfus-builtins/src/: lib.rs  tests.rs
crates/galfus-bytecode/: Cargo.toml  README.md
crates/galfus-cli/: Cargo.toml  README.md
crates/galfus-compiler/: Cargo.toml
crates/galfus-compiler/src/: graph.rs  input.rs  lib.rs
crates/galfus-compiler/src/compile/: context.rs  exports.rs  globals.rs  init.rs  mod.rs  module.rs  resolve.rs
crates/galfus-compiler/src/graph/: tests.rs
crates/galfus-contract/: Cargo.toml  README.md
crates/galfus-core/: Cargo.toml  README.md
crates/galfus-frontend/: Cargo.toml  README.md
crates/galfus-host/: Cargo.toml  README.md
crates/galfus-host/src/: lib.rs
crates/galfus-image/: Cargo.toml  README.md
crates/galfus-ir/: Cargo.toml  README.md
crates/galfus-ir/src/: builder.rs  lib.rs  mir.rs  tests.rs  validator.rs
crates/galfus-ir/src/builder/: complex_literals.rs  expression.rs  function.rs  function_helpers.rs  helpers.rs  mod.rs  module_items.rs  pattern.rs
crates/galfus-ir/src/lower/: constants.rs  control_flow.rs  expression.rs  function.rs  helpers.rs  mod.rs  module.rs  ssa.rs  types.rs
crates/galfus-ir/src/tests/: builder.rs  lowering.rs
crates/galfus-ir/src/tests/builder/: lowering.rs  phases.rs
crates/galfus-jit/: Cargo.toml  README.md
crates/galfus-playground/: Cargo.toml
crates/galfus-playground/src/: buffer_io.rs  executor.rs  lib.rs  tests.rs  wasm.rs
crates/galfus-playground/src/buffer_io/: tests.rs
crates/galfus-runner/: Cargo.toml  README.md
crates/galfus-runner/src/: check.rs  compile_workspace.rs  diagnostic.rs  executor.rs  graph.rs  lib.rs  local_graph.rs  module.rs  native_io.rs  print.rs  repl.rs  run.rs  workspace.rs  workspace_graph.rs
crates/galfus-runner/src/check/: mod.rs  references.rs
crates/galfus-runner/src/tests/: check.rs  format_parse.rs  gfb.rs  graph.rs  import_call_resolution.rs  io_lowering.rs  mod.rs  module_init.rs  mvp_validation.rs  reserved_builtins.rs  run.rs  workspace.rs
crates/galfus-runner/src/tests/check/: named_imports.rs  namespace_imports.rs  relative_imports.rs
crates/galfus-runner/src/tests/workspace/: adapter.rs  graph.rs  manifest.rs
crates/galfus-runner/src/workspace/: adapter.rs  check.rs  compile.rs  config.rs  graph.rs  mod.rs  tests.rs
crates/galfus-runner/src/workspace/compile/: context.rs  exports.rs  globals.rs  init.rs  resolve.rs
crates/galfus-runtime/: Cargo.toml  README.md
crates/galfus-runtime/src/: lib.rs  module_graph.rs  queue.rs  registry.rs  task.rs  tests.rs
crates/galfus-runtime/src/registry/: tests.rs
crates/galfus-runtime/src/task/: tests.rs
crates/galfus-target/: Cargo.toml  README.md
crates/galfus-target/src/: abi.rs  lib.rs  native.rs  tests.rs  web.rs
crates/galfus-tools/: Cargo.toml
crates/galfus-vm/: Cargo.toml  README.md
crates/galfus-vm/src/: error.rs  lib.rs  runtime.rs  tests.rs  thread.rs
crates/galfus-vm/src/error/: tests.rs
crates/galfus-vm/src/runtime/: casts.rs  control.rs  data.rs  gc.rs  graph_release.rs  heap.rs  objects.rs  operators.rs  system.rs  target_io.rs  tests.rs
crates/galfus-vm/src/runtime/tests/: arithmetic_and_control.rs  io_and_arrays.rs  module_state.rs  objects_and_types.rs  ownership.rs
crates/galfus-vm/src/runtime/tests/arithmetic_and_control/: dynamic_calls.rs  operators_and_control.rs
crates/galfus-vm/src/runtime/tests/objects_and_types/: copy.rs  storage_and_runtime.rs
crates/galfus-vm/src/thread/: tests.rs
crates/galfus-workspace/: Cargo.toml
crates/galfus-workspace/src/: config.rs  diagnostic.rs  executor.rs  lib.rs  source_store.rs  state.rs  workspace.rs
crates/galfus-workspace/src/executor/: tests.rs
crates/galfus-workspace/src/source_store/: tests.rs
crates/galfus-workspace/src/workspace/: tests.rs
crates/galfus-workspace/src/workspace/tests/: compilation.rs  execution.rs
docs/: Architecture Reference.md  Development Project Reference.md  Galfus_Adapters_Surface_Reference.md  Galfus_Architecture_Reference.md  Galfus_Builtins_Reference.md  Galfus_MIR_Reference.md  Galfus_MVP_Reference.md  Galfus_Pipeline_Boundaries.md  Galfus_Semantic_Reference.md  Galfus_Syntax_Reference.md  Galfus_VM_Opcodes_Reference.md  Galfus_Workspace_Reference.md  Syntax Reference.md
docs/core-system/: 00-index.md  01-reserved-words-and-lexical-rules.md  02-source-names-and-modules.md  03-bindings-literals-and-primitive-types.md  04-type-system-inference-and-propagation.md  05-generics.md  06-constraints-as-traits.md  07-data-forms.md  08-expressions-and-operators.md  09-mutation-assignment-and-ownership.md  10-functions-and-calls.md  11-control-flow.md  12-iteration-and-ranges.md  13-pattern-matching-and-narrowing.md  14-decorators-and-keyword-metadata.md  15-lowering-and-runtime-semantics.md
docs/future/: concurrency_and_actors.md  concurrency_and_stm.md
editors/vscode/: .vscodeignore  README.md  language-configuration.json  package.json  tsconfig.json
examples/: language_showcase.gfs  main.gfs  threads_showcase.gfs
examples/project/: galfus.toml
examples/test-web/: test.ts
rich_builtin/: io.gfs
scripts/: package.json  tsconfig.json
scripts/github/: api.ts  prepare-component-version.ts  sync-changelog-labels.ts  validate-pr-policy.ts
scripts/src/: cmd.ts  setup-extension.ts
(+396 files in other folders)
