[workspace]
members = ["crates/*"]
default-members = ["crates/galfus-cli"]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Serialization / binary data format
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
postcard = { version = "1.1", default-features = false, features = ["use-std"] }

# Deterministic / structural collections
indexmap = "2.14"

# Allocation / small-data optimization
smallvec = "1.15"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Observability / diagnostics
tracing = "0.1"

# Development / watch mode / hot reload
notify = "8.2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"