[package]
name = "galfus-builtins"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
galfus-core = { path = "../galfus-core" }
galfus-runtime = { path = "../galfus-runtime" }

thiserror.workspace = true

[dev-dependencies]
galfus-frontend = { path = "../galfus-frontend" }
