[package]
name = "galfus-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
galfus-core = { path = "../galfus-core" }
galfus-frontend = { path = "../galfus-frontend" }
galfus-bytecode = { path = "../galfus-bytecode" }
galfus-ir = { path = "../galfus-ir" }

anyhow.workspace = true
