[package]
name = "galfus-ir"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
galfus-core = { path = "../galfus-core" }
galfus-frontend = { path = "../galfus-frontend" }
galfus-image = { path = "../galfus-image" }

serde.workspace = true
postcard.workspace = true
thiserror.workspace = true
