[package]
name = "galfus-runner"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
galfus-builtins = { path = "../galfus-builtins" }
galfus-core = { path = "../galfus-core" }
galfus-frontend = { path = "../galfus-frontend" }
galfus-host = { path = "../galfus-host" }
galfus-ir = { path = "../galfus-ir" }
galfus-runtime = { path = "../galfus-runtime" }
galfus-vm = { path = "../galfus-vm" }

serde.workspace = true
toml.workspace = true

tracing.workspace = true
notify.workspace = true

anyhow.workspace = true
thiserror.workspace = true
