[package]
name = "galfus-runner"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
galfus-core = { path = "../galfus-core" }
galfus-frontend = { version = "0.0.0", path = "../galfus-frontend" }
toml.workspace = true

anyhow.workspace = true
galfus-workspace = { version = "0.0.0", path = "../galfus-workspace" }
