[package]
name = "galfus-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
galfus-core = { path = "../galfus-core" }
galfus-compiler = { path = "../galfus-compiler" }
galfus-contract = { path = "../galfus-contract" }
galfus-bytecode = { path = "../galfus-bytecode" }
galfus-vm = { path = "../galfus-vm" }

smallvec.workspace = true
thiserror.workspace = true
