[package]
name = "galfus-target"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
libloading = { workspace = true, optional = true }
wasmtime = { workspace = true, optional = true }

[features]
default = []
native = ["dep:libloading"]
wasm = ["dep:wasmtime"]
