[package]
name = "galfus-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
galfus-core = { path = "../galfus-core" }
galfus-frontend = { path = "../galfus-frontend" }
galfus-ir = { path = "../galfus-ir" }
galfus-runner = { path = "../galfus-runner" }
galfus-vm = { path = "../galfus-vm" }

anyhow.workspace = true
thiserror.workspace = true
