[package]
name = "galfus-vm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
galfus-core = { path = "../galfus-core" }
galfus-host = { path = "../galfus-host" }
galfus-image = { path = "../galfus-image" }

thiserror.workspace = true
tracing.workspace = true
