[package]
name = "galfus-vm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
galfus-core = { path = "../galfus-core" }
galfus-contract = { path = "../galfus-contract" }
galfus-bytecode = { path = "../galfus-bytecode" }

thiserror.workspace = true
tracing.workspace = true
