[package]
name = "galfus-workspace"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
galfus-builtins = { path = "../galfus-builtins" }
galfus-compiler = { path = "../galfus-compiler" }
galfus-core = { path = "../galfus-core" }
galfus-frontend = { path = "../galfus-frontend" }
galfus-runtime = { path = "../galfus-runtime" }
galfus-target = { path = "../galfus-target" }
serde = { workspace = true }
toml = { workspace = true }
