[package]
name = "galfus-workspace"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
galfus-builtins = { path = "../galfus-builtins" }
galfus-compiler = { path = "../galfus-compiler" }
galfus-core = { path = "../galfus-core" }
galfus-frontend = { path = "../galfus-frontend" }
galfus-host = { path = "../galfus-host" }
galfus-runtime = { path = "../galfus-runtime" }
serde = { workspace = true }
toml = { workspace = true }
